--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,12 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+static def releaseTime() {
+    return new Date().format("yyyy-MM-dd")
+}
 android {
     compileSdkVersion 29
 
@@ -32,7 +37,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
+    lintOptions {  
         disable 'InvalidPackage'
     }
 
@@ -46,11 +51,25 @@ android {
         versionName flutterVersionName
     }
 
+   signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+        }
+    }
+  
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            // 输出apk名称为ZD_1.0_2018-08-13.apk
+            def fileName = "TJ_${releaseTime()}.apk"
+            outputFileName = fileName
         }
     }
 }
