--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_tianji"
+        android:label="天玑AI"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
