--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -36,7 +36,7 @@ dependencies:
   path_provider: ^1.6.5
   common_utils: ^1.2.1 #常用工具类 时间轴 倒计时 正则 加密
   webview_flutter: ^0.3.22+1
-  pull_to_refresh: ^1.5.7
+  pull_to_refresh: 1.6.3
   cookie_jar: ^ 1.0.0
   date_format: ^1.0.8
   fluro: ^1.7.8
@@ -49,12 +49,16 @@ dependencies:
   image_picker: ^0.6.6+1 # 相机拍照选取相册
   flutter_html: ^1.0.0
   barcode_scan: ^3.0.1
+  url_launcher: ^5.4.7
+  percent_indicator: ^2.1.3  
+  flutter_app_upgrade: ^1.0.2 
+  fsuper: ^0.1.5 
   flutter_seekbar:
     git: https://github.com/LiuC520/flutter_seekbar.git 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  fl_chart: ^0.12.3 # 策略折线图
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,6 +84,7 @@ flutter:
     - images/mine/
     - images/business/
     - images/baike/
+    - images/strategy/
 
     # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
